added fetch capabilities for the button click event to display necessary API response

--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="styles.css" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/0bc0e95bff.js" crossorigin="anonymous"></script>
     </head>
     <body>
+        <main id="main-container">
+            <!-- Section for inputand search button -->
+            <section id="input-section">
+                <form action="">
+                    <input type="text" id="input-value" placeholder="Enter word...">
+                    <button type="submit" id="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
+                </form>
+            </section>
+            <!-- Section for feedback when search button is clicked -->
+
+            <section id="feedback"></section>
+        </main>
 
         <script src="script.js"></script>
     </body>
