added styling to the input and search button in external CSS

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     </head>
     <body>
         <main id="main-container">
-            <!-- Section for inputand search button -->
+            <!-- Section for input and search button -->
             <section id="input-section">
-                <form action="">
+                <h2 style="text-align: center">Free Dictionary</h2>
+                <form action="" id="my-form">
                     <input type="text" id="input-value" placeholder="Enter word...">
                     <button type="submit" id="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
